# Bond

./: build.gradle  gradle.properties  versions.gradle
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: tls-ca-chain.pem
app/src/main/cpp/: CMakeLists.txt  blackbox.c  blackbox.h  blackboxcalls.c
app/src/main/res/anim/: camera_rotation.xml  camera_rotation_exit.xml  non_slide.xml
app/src/main/res/color/: selector_tick_marks_color.xml
app/src/main/res/drawable/: bg_alert_part.xml  bg_msg_copy.xml  bg_msg_copy_fullrounded.xml  bg_msg_forward.xml  bg_msg_forward_fullrounded.xml  bg_msg_left_fullrounded.xml  bg_msg_right.xml  bg_msg_right_fullrounded.xml  bottom_nav_icon_color_selector.xml  button_bg.xml  cicle_no_unread_msgs.xml  circle_background_selected.xml  circle_calculator.xml  circle_document_shape.xml  circle_primary_color_light.xml  circle_shape.xml  circular_document_progress_bar.xml  circular_progress_bar.xml  custom_progress_background.xml  delete_icon_background.xml  editext_bg_logo.xml  explore_selector.xml  green_circle.xml  group_list_background.xml  ic_arrow_down_24.xml  ic_arrow_up_24.xml  ic_back.xml  ic_baseline_add_ic_conference_call_24.xml  ic_baseline_check_24.xml  ic_baseline_delete_forever_24.xml  ic_baseline_dialpad_24.xml  ic_baseline_fiber_manual_record_24.xml  ic_baseline_phone_callback_24.xml  ic_baseline_video_call_24.xml  ic_call_end_white_24px.xml  ic_call_grey_600_24dp.xml  (+39 more)
app/src/main/res/drawable-v24/: search_bg.xml
app/src/main/res/drawable-xhdpi/: buttons_rectangle.xml  ic_user.xml
app/src/main/res/drawable-xhdpi-v4/: ic_backspace_vector.xml
app/src/main/res/drawable-xxhdpi/: ic_change_camera.xml  ic_wallpaper.xml  rect_round_16.xml
assets/: tls-ca-chain.pem
distribution/arm64-v8a/: libcrypto.so.1.1  libssl.so.1.1
distribution/include/: blackbox.h
distribution/include/jpeg/: Makefile  cjpeg  djpeg  jpegtran  libtool
gradle/wrapper/: gradle-wrapper.properties
utils/: build.gradle
(+363 files in other folders)
